--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Vanilla JavaScript App</title>
+    <title>バニラ JavaScript App</title>
   </head>
 
   <body>
     <main>
-      <h1>Vanilla JavaScript App</h1>
-      <p>Loading content from the API: <b id="message"></b></b></p>
+      <h1>バニラ JavaScript App</h1>
+      <p>API呼び出しの結果: <b id="message"></b></b></p>
     </main>
   </body>
 
